# hwr-ical

./: .gitignore  Cargo.toml  Dockerfile
backend/: Cargo.toml
backend/src/: consts.rs  course_fetcher.rs  main.rs
backend/src/routes/: courses.rs  ical.rs  mod.rs  regex_limit.rs
backend/testdata/: example_calendar.ics  example_stundenplan.php
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/components/: CalendarView.vue  CourseSelector.vue  FilterList.vue
frontend/src/util/: calendarentry.ts  fetcher.ts  filter.ts  semester.ts
src/: ical_parser.rs  main.rs
