[package]
name = "hwr-ical"
authors = ["Conner"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
axum = { version = "0.5" }
axum-extra = { version = "0.3", features = ["spa"] }
tokio = { version = "1.17", features = ["full"] }
encoding_rs = "0.8"
fancy-regex = "0.11"
regex = "1.5"
lazy_static = "1.4"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
icalendar = "0.15"
